cluster/apps/default/unifi/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  namespace: default
  annotations:
    cert-manager.io/issuer: freeipa-issuer
    cert-manager.io/issuer-group: certmanager.freeipa.org
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/common-name: unifi.k3s.i.${DOMAIN}

    # This is necessary as otherwise there will be an error
    # This is because the unifi controller only offers a port for HTTPS for the web UI
    # Bad Request
    # This combination of host and port requires TLS.
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS

    # Necessary to upload larger backup files
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    # Required when there is another proxy between the browser and the ingress
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   proxy_set_header Origin '';
    #   proxy_set_header Referer '';
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - unifi.k3s.i.${DOMAIN}
    secretName: unifi-cert
  rules:
  - host: unifi.k3s.i.${DOMAIN}
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: unifi
              port:
                number: 8443
